@@ -22,7 +22,7 @@ public class GravityAndOrbitsDefaults {
     // Clock
     public static final boolean CLOCK_RUNNING = true;
     public static final int CLOCK_FRAME_RATE = 25; // fps, frames per second (wall time)
-    private static final double NUMBER_DAYS_PER_TICK = 4;
+    public static final double NUMBER_DAYS_PER_TICK = 4;
     public static final double CLOCK_DT = NUMBER_DAYS_PER_TICK * 86400;//seconds in a day
     public static final int CLOCK_TIME_COLUMNS = 10;
 
